--- a/MyCvWebsite/MyCvWebsite/Views/Home/Index.cshtml
+++ b/MyCvWebsite/MyCvWebsite/Views/Home/Index.cshtml
@@ -1,1 +1,19 @@
 ﻿
+
+<br />
+<br />
+<br />
+<br />
+<div>
+    <img id="portrait" src="~/AcademicWork_juni_2017_001.png" />
+</div>
+
+
+
+
+@section scripts
+{
+    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.1.0.min.js"></script>
+    <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"></script>
+    <script src="http://ajax.aspnetcdn.com/ajax/mvc/5.2.3/jquery.validate.unobtrusive.min.js"></script>
+}
