--- a/MyCvWebsite/MyCvWebsite/Views/Shared/_Layout.cshtml
+++ b/MyCvWebsite/MyCvWebsite/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
     
     <div id="wrapper">
 
-        @*Navbar*@
+        @*Navbar, ska flöja med vid skroll och känna vart på sidan man är. *@
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
