--- a/MyCvWebsite/MyCvWebsite/Views/Home/Index.cshtml
+++ b/MyCvWebsite/MyCvWebsite/Views/Home/Index.cshtml
@@ -7,6 +7,12 @@
 <div>
     <img id="portrait" src="~/AcademicWork_juni_2017_001.png" />
 </div>
+<h1>Kompetenser</h1>
+
+<h1>Uppdrag</h1>
+<h1>Utbildning</h1>
+<h1>Certifiering?</h1>
+
 
 
 
