--- a/MyCvWebsite/MyCvWebsite/Views/_ViewImports.cshtml
+++ b/MyCvWebsite/MyCvWebsite/Views/_ViewImports.cshtml
@@ -1,1 +1,2 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using MyCvWebsite.Models
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
