--- a/MyCvWebsite/MyCvWebsite/wwwroot/Css/MySheet.css
+++ b/MyCvWebsite/MyCvWebsite/wwwroot/Css/MySheet.css
@@ -22,9 +22,51 @@
 }
 
 #portrait{
-    height: 200px;
-    width: 200px;
+    height: 250px;
+    width: 250px;
     margin-left:auto;
     margin-right:auto;
 
+}
+
+#socialMedia {
+    height: 50px;
+    width: 50px;
+}
+
+#socialMediaDiv{
+    column-count:2;
+
+}
+
+#about {
+    margin-left: auto;
+    margin-right: auto;
+
+    padding-left:10%;
+}
+
+#learningBild {
+    position: absolute;
+    left: 40%;
+    top:25%;
+}
+
+
+#profBild {
+    position: absolute;
+    left: 55%;
+    top: 25%;
+}
+
+#serviceBild {
+    position: absolute;
+    left: 47%;
+    top: 45%;
+    
+    
+}
+
+#drivkrafterRow {
+    padding-left:40%;
 }
