--- a/MyCvWebsite/MyCvWebsite/Views/Home/Index.cshtml
+++ b/MyCvWebsite/MyCvWebsite/Views/Home/Index.cshtml
@@ -24,10 +24,10 @@
     <h1>Certifiering?</h1>
 </div>
 
-@*@if (@Model.IsLoggedIn == true)
+@if (@Model.IsLoggedIn == true)
 {
-   IsLoggedIn();
-}*@
+    <script>LoggedIn();</script>
+}
 
 
 @*Kontakt formulär, ska kopplas till form, mha tag helpers*@
@@ -41,20 +41,32 @@
         <p><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</p>
         @*</div>*@
     </div>
-    <div class="row">
-        <div class="col-sm-6 form-group">
-            <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+    <form asp-controller="home" asp-action="Index">
+        <div class="row">
+            <div class="col-sm-6 form-group">
+                <label asp-for="Name"></label>
+                <input asp-for="Name" />
+                <span asp-validation-for="Name"></span>
+                @*<input class="form-control" id="name" name="name" placeholder="Name" type="text" required>*@
+            </div>
+            <div class="col-sm-6 form-group">
+                <label asp-for="Email"></label>
+                <input asp-for="Email" />
+                <span asp-validation-for="Email"></span>
+                @*<input class="form-control" id="email" name="email" placeholder="Email" type="email" required>*@
+            </div>
         </div>
-        <div class="col-sm-6 form-group">
-            <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+        <label asp-for="Message"></label>
+        <br />
+        <textarea asp-for="Message" rows="5" cols="53"></textarea>
+       
+        @*<textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br>*@
+        <div class="row">
+            <div class="col-sm-12 form-group">
+                <input type="submit" value="Send" />
+            </div>
         </div>
-    </div>
-    <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br>
-    <div class="row">
-        <div class="col-sm-12 form-group">
-            <button class="btn btn-default pull-right" type="submit">Send</button>
-        </div>
-    </div>
+    </form>
 </div>
 
 @section scripts
